# ECG-classification

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: defaults.yaml
configs/experiments/: bilstm_attention.yaml  bilstm_baseline.yaml  cnn1d_baseline.yaml  cnn_lstm_final.yaml
notebooks/: 01_dataset_audit.ipynb  02_segmentation_sanity_checks.ipynb  03_results_analysis.ipynb
scripts/: audit_dataset.py  bootstrap_data.py  build_beat_table.py  evaluate.py  make_splits.py  train.py
src/ecg_repo/data/: augmentation.py  collate.py  dataset.py  filtering.py  labels.py  loading.py  preprocessing.py  segmentation.py  splits.py
src/ecg_repo/evaluation/: metrics.py  plots.py  reports.py
src/ecg_repo/models/: bilstm.py  bilstm_attention.py  cnn1d.py  cnn_lstm.py
src/ecg_repo/training/: losses.py  optim.py  trainer.py
src/ecg_repo/utils/: checkpointing.py  io.py  seed.py
tests/: test_dataset_shapes.py  test_filtering.py  test_group_splits.py  test_labels.py  test_metrics.py  test_segmentation.py
