[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-beat-classification"
version = "0.1.0"
description = "Refactored ECG beat classification repo with grouped splits and reproducible PyTorch experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Thomas Carruthers"}
]
dependencies = [
  "datasets>=2.18.0",
  "huggingface-hub>=0.20.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "PyYAML>=6.0.1",
  "scikit-learn>=1.4.0",
  "scipy>=1.11.0",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.0",
  "jupyter>=1.0.0",
  "nbformat>=5.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pre-commit>=3.6.0",
  "ruff>=0.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
